[metadata]
name = napari-cistem

author = Johannes Elferich
author_email = jojotux123@hotmail.com
url = https://github.com/jojoelfe/napari-cistem
license = MIT
description = A plugin to inspect data within a cisTEM project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/jojoelfe/napari-cistem/issues
    Documentation = https://github.com/jojoelfe/napari-cistem#README.md
    Source Code = https://github.com/jojoelfe/napari-cistem
    User Support = https://github.com/jojoelfe/napari-cistem/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy
    mrcfile
    pandas

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-cistem = napari_cistem
